--- a/src/app/_sections/sections.module.scss
+++ b/src/app/_sections/sections.module.scss
@@ -72,6 +72,8 @@
 }
 
 .buttonContainer {
+	margin-top: 1rem;
+
 	& > a:not(:last-of-type) {
 		margin-right: 0.5em;
 	}
